<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_world">Hello World</string>
    <string name="button_text">I’m a button!</string>
    <string name="thank_you">Thank You</string>
    <string name="do_not_call_me_that">Do Not Call Me That</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="hint_name">Please enter your name</string>
    <string name="next">Next</string>
    <string name="type_here">Type here</string>
    <string name="add">Add</string>
    <string name="urgent">Urgent</string>
    <string name="todo_item_text" translatable="false">To-Do item descriotion</string>>
</resources>