<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">

    <Button
        android:id="@+id/buttonThankYou"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/thank_you"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="193dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonNeverCallMe"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/do_not_call_me_that"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="106dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
